--- a/usr/share/man/man1/newpasswd.1
+++ b/usr/share/man/man1/newpasswd.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH NEWPASSWD 1 "2012-07-11" "0.1" "User Commands"
+.TH NEWPASSWD 1 "2012-08-13" "0.2" "User Commands"
 .SH NAME
 newpasswd \- generate a brand new password
 .
@@ -34,35 +34,43 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .sp
 .nf
 .ft C
-newpasswd [\-h] [\-l LEN] [\-n N] [\-r] [\-\-extended] [\-\-greek] [\-\-cyrillic]
+newpasswd [\-h] [\-l LEN] [\-n N] [\-a] [\-\-latin] [\-\-greek] [\-\-cyrillic]
+          [\-\-armenian] [\-\-kana] [\-\-cjk]
 .ft P
 .fi
 .SH OPTIONS
 .INDENT 0.0
 .TP
 .B \-\-help,  \-h
-Show this help message and exit.
+show this help message and exit
 .TP
-.BI \-\-length\fB= LEN, \ \-l \ LEN
-Length of your password.
+.BI \-\-length \ LEN, \ \-l \ LEN
+length of your password
 .TP
-.BI \-\-count\fB= N, \ \-n \ N
-Ammount of passwords to generate.
+.BI \-\-count \ N, \ \-n \ N
+ammount of passwords to generate
 .TP
-.B \-\-random,  \-r
-Use /dev/random as source of randomity.
+.B \-\-all,  \-a
+use as much different characters as possible
 .TP
-.B \-\-extended
-Use characters from Latin Supplement, Extended\-A and
-Extended\-B blocks in password.
+.B \-\-latin
+use more latin characters when generating a password
 .TP
 .B \-\-greek
-Use characters from Greek and Coptic block in
-password.
+use greek and coptic characters when generating a
+password
 .TP
 .B \-\-cyrillic
-Use characters from Cyrillic and Cyrillic Supplement
-blocks in password.
+use cyrillic characters when generating a password
+.TP
+.B \-\-armenian
+use armenian characters when generating a password
+.TP
+.B \-\-kana
+use hiragana and katakana when generating a password
+.TP
+.B \-\-cjk
+use CJK ideographs when generating a password
 .UNINDENT
 .SH ISSUES
 .sp
